compile_errors_v7.txt
    Checking olympus v13.0.0 (/home/tdy/Escritorio/rocky)
error[E0425]: cannot find value `circuit_breaker` in this scope
   --> src/actors/erinyes/recovery.rs:299:22
    |
299 |         let mut cb = circuit_breaker.write().await;
    |                      ^^^^^^^^^^^^^^^
    |
help: you might have meant to use the available field
    |
299 |         let mut cb = self.circuit_breaker.write().await;
    |                      +++++

error[E0433]: failed to resolve: use of undeclared type `Duration`
   --> src/actors/hades/mod.rs:428:31
    |
428 |         auth.cleanup_sessions(Duration::from_secs(0)).await;
    |                               ^^^^^^^^ use of undeclared type `Duration`
    |
help: consider importing one of these items
    |
  5 + use std::time::Duration;
    |
  5 + use chrono::Duration;
    |
  5 + use ractor::concurrency::Duration;
    |
  5 + use surrealdb::sql::Duration;
    |
    = and 1 other candidate

error[E0433]: failed to resolve: use of undeclared type `Duration`
   --> src/actors/hades/mod.rs:555:50
    |
555 | ...   let count = audit.purge_old_logs(Duration::from_secs(max_age_days * 24 * 60 * 60))...
    |                                        ^^^^^^^^ use of undeclared type `Duration`
    |
help: consider importing one of these items
    |
  5 + use std::time::Duration;
    |
  5 + use chrono::Duration;
    |
  5 + use ractor::concurrency::Duration;
    |
  5 + use surrealdb::sql::Duration;
    |
    = and 1 other candidate

error[E0425]: cannot find type `Arc` in this scope
  --> src/infrastructure/surreal.rs:53:13
